# lucino

./: .gitignore  .svnignore  CMakeLists.txt  Doxyfile  README.md  build_tags.sh  configure  java_files
WindowsProjekte/StaticLibNew/: ReadMe.txt  StaticLib.ncb  StaticLib.sln  StaticLib.vcproj
bindings/cpp/: .svnignore  CMakeLists.txt  Makefile.am  bootstrap  configure.in
bindings/cpp/config/: .svnignore
bindings/cpp/lucenecpp/: Makefile.am  analyzer.cpp  analyzer.hpp  analyzermap.cpp  analyzermap.hpp  autoreleasepool.cpp  autoreleasepool.hpp  booleanquery.cpp  booleanquery.hpp  directory.cpp  directory.hpp  document.cpp  document.hpp  documentdumpiterator.cpp  documentdumpiterator.hpp  exception.cpp  exception.hpp  field.cpp  field.hpp  hash.hpp  hits.cpp  hits.hpp  indexreader.cpp  indexreader.hpp  indexsearcher.cpp  indexsearcher.hpp  list.hpp  lucenecpp.cpp  lucenecpp.hpp  poolobject.hpp  prefixquery.cpp  prefixquery.hpp  query.cpp  query.hpp  search.hpp  searcher.cpp  searcher.hpp  string.cpp  string.hpp  term.cpp  (+3 more)
bindings/cpp/test/: Makefile.am  documenttest.cpp  documenttest.hpp  main.cpp  termquerytest.cpp  termquerytest.hpp  test.cpp  test.hpp  testsuite.cpp  testsuite.hpp
bindings/java/Liblucene4J/JNIbindings/liblucene4j/: .svnignore  Makefile.am  Makefile.in  ReadMe.txt  bootstrap  config.h.in  configure  configure.in  liblucene4j.sln  liblucene4j.vcproj
bindings/java/Liblucene4J/JNIbindings/liblucene4j/config/: .svnignore
bindings/java/Liblucene4J/JNIbindings/liblucene4j/liblucene4j/: .svnignore  Makefile.am  liblucene4j.c  liblucene4j.h  liblucene4j.vcproj
bindings/python/: setup.py
doc/: encoding.txt
examples/: .svnignore  Makefile  Makefile.am  Makefile.in  indexinfo.c  indexinfo_func.c  indexinfo_func.h
include/: Makefile.am  Makefile.in  lcn_analysis.h  lcn_bitvector.h  lcn_error_codes.h  lcn_index.h  lcn_search.h  lcn_segment_merge_info.h  lcn_store.h  lcn_term_enum.h  lcn_util.h  lucene.h
indexbrowser/: clbmain.py
indexbrowser/clbrowser/: __init__.py  clbworker.py  i18n.py  misc.py
indexbrowser/glade/: clbrowser.glade  clbrowser.gladep
java/: Launcher.java
lucene/: .svnignore  FieldInfos.java  Makefile.am  Makefile.in  StdAfx.cpp  StdAfx.h  TermDocsTest.java  TestIndex.java  TestSearcher.java  TestStored.java
lucene/analysis/: analyzer_map.c  char_tokenizer.h  letter_tokenizer.c  letter_tokenizer.h  lowercase_filter.c  stemmer.h  stop_filter.c  stop_filter.h  whitespace_tokenizer.c  whitespace_tokenizer.h
lucene/analysis/de/: german_stemmer.c
lucene/document/: document.c  document.h  field.c
lucene/index/: directory_reader.c  document_writer.c  fields_reader.h  fields_writer.h  fs_field.c  fs_field.h  index_file_names.h  index_reader.c  index_reader.h  index_writer.c  index_writer.h  index_writer_config.c  index_writer_config.h  io_context.h  multi_fs_field.c  segment_infos.c  segment_infos.h  segment_merge_info.c  segment_reader.c  term.c  term.h  term_docs.h  term_infos_reader.c  term_infos_reader.h  term_infos_writer.c  term_infos_writer.h
lucene/query_parser/: .svnignore  query_parser.c  query_parser.h  query_parser.y  query_tokenizer.c  query_tokenizer.h  query_tokenizer.re
lucene/search/: boolean_scorer.c  conjunction_scorer.c  conjunction_scorer.h  coordinator.c  counting_conjunction_sum_scorer.c  disjunction_sum_scorer.c  field_sorted_hit_queue.c  field_sorted_hit_queue.h  filtered_query.c  fs_field_query.c  hit_collector.c  hit_collector.h  hit_queue.c  hits.c  hits.h  non_matching_scorer.c  phrase_positions.c  phrase_scorer.c  phrase_scorer.h  query.h  req_excl_scorer.c  scorer.h  scorer_queue.h  searcher.h  similarity.c  similarity.h  single_match_scorer.c  sort_field.c  top_doc_collector.h  top_docs.c  top_docs.h  weight.c  weight.h
lucene/store/: compound_file_reader.h  compound_file_util.c  compound_file_writer.c  compound_file_writer.h  directory.c  directory.h  istream.c
lucene/util/: linked_list.c  list.c  lucene_util.h  priority_queue.h  smallfloat.c  to_string_utils.c  util.c
src/analysis/: analyzer.c  analyzer.h  char_tokenizer.c  letter_tokenizer.c  lowercase_tokenizer.c  lowercase_tokenizer.h  simple_analyzer.c  stemmer.c  token.c  token.h  whitespace_analyzer.c  whitespace_tokenizer.c
src/codecs/: codec.h  codec_util.c
src/document/: document.c  document_dump_reader.c  field.c  field.h  field_type.c
src/index/: directory_reader.c  directory_reader.h  doc_helper.c  document_writer.c  document_writer.h  field_infos.c  field_infos.h  fields_reader.c  fields_reader.h  fields_writer.c  fields_writer.h  fs_field.c  fs_field.h  index_file_deleter.c  index_file_deleter.h  index_file_names.c  index_file_names.h  index_reader.c  index_reader.h  index_writer.c  index_writer.h  index_writer_config.c  io_context.c  io_context.h  multi_reader.c  multiple_term_positions.c  readers_and_live_docs.c  readers_and_live_docs.h  segment_info.c  segment_info_per_commit.c  segment_infos.c  segment_infos.h  segment_merger.c  segment_merger.h  segment_reader.c  term_docs.c  term_docs.h  term_enum.c  term_enum.h  term_infos_reader.c  (+2 more)
src/query_parser/: query_tokenizer.c
src/search/: boolean_clause.c  boolean_clause.h  boolean_query.c  boolean_scorer.c  counting_disjunction_sum_scorer.c  disjunction_sum_scorer.h  explanation.c  explanation.h  hit_collector.h  (+23 more)
test/: CuTest.c  CuTest.h  t_50_checksum_index_output.c  t_50_crc32.c  t_50_document_writer.c  t_50_index_writer.c  t_array.c  t_atom.c  t_bitvector.c  t_boolean_clause.c  t_boolean_query.c  t_char_tokenizer.c  t_compatibility.c  t_compound_file.c  t_compound_file_util.c  t_custom_hit_queue.c  t_directory.c  t_document.c  t_explanation.c  t_field_fixed_size.c  t_field_infos.c  t_field_sorted_hit_queue.c  t_filtered_query.c  t_fs_field_bitvector.c  t_fs_field_query.c  t_german_analyzer.c  t_german_stem_filter.c  t_group_search.c  t_index_reader.c  t_index_searcher.c  t_index_writer.c  t_index_writer_bugs.c  t_input_stream.c  t_linked_list.c  t_list.c  t_lucene_util.c  t_match_all_docs_query.c  t_multi_phrase_query.c  t_multi_reader.c  t_multiple_fields.c  (+33 more)
(+57 files in other folders)
