INCLUDES = -I$(top_builddir)                    \
           -I$(top_srcdir)/include              \
           -I$(top_srcdir)/lucene/index         \
           -I$(top_srcdir)/lucene/util          \
           -I$(top_srcdir)/lucene/store         \
           -I$(top_srcdir)/lucene/search        \
           -I$(top_srcdir)/lucene/analysis      \
           -I$(top_srcdir)/lucene/document

lib_LTLIBRARIES     = liblucene.la
liblucene_la_CFLAGS = -Wall -D_LARGEFILE64_SOURCE -D_LCNTRACE -g
# fprofile-arcs -ftest-coverage

liblucene_la_SOURCES =                                  \
        analysis/de/german_stemmer.c                    \
        analysis/de/german_stem_filter.c                \
        analysis/de/german_analyzer.c                   \
        analysis/analyzer.c                             \
        analysis/analyzer_map.c                         \
        analysis/char_tokenizer.c                       \
        analysis/letter_tokenizer.c                     \
        analysis/lowercase_filter.c                     \
        analysis/lowercase_tokenizer.c                  \
        analysis/simple_analyzer.c                      \
        analysis/stemmer.c                              \
        analysis/stop_filter.c                          \
        analysis/token.c                                \
        analysis/whitespace_analyzer.c                  \
        analysis/whitespace_tokenizer.c                 \
        document/document.c                             \
        document/document_dump_reader.c                 \
        document/field.c                                \
        index/document_writer.c                         \
        index/field_infos.c                             \
        index/fields_reader.c                           \
        index/fields_writer.c                           \
        index/fs_field.c                                \
        index/index_reader.c                            \
        index/index_writer.c                            \
        index/multi_fs_field.c                          \
        index/multi_reader.c                            \
        index/multiple_term_positions.c                 \
        index/segment_infos.c                           \
        index/segment_merge_info.c                      \
        index/segment_merger.c                          \
        index/segment_reader.c                          \
        index/term.c                                    \
        index/term_docs.c                               \
        index/term_enum.c                               \
        index/term_infos_reader.c                       \
        index/term_infos_writer.c                       \
        query_parser/query_parser.c                     \
        query_parser/query_tokenizer.c                  \
        search/boolean_clause.c                         \
        search/boolean_query.c                          \
        search/boolean_scorer.c                         \
        search/conjunction_scorer.c                     \
        search/coordinator.c                            \
        search/counting_conjunction_sum_scorer.c        \
        search/counting_disjunction_sum_scorer.c        \
        search/disjunction_sum_scorer.c                 \
        search/explanation.c                            \
        search/field_sorted_hit_queue.c                 \
        search/filtered_query.c                         \
        search/hit_collector.c                          \
        search/hit_queue.c                              \
        search/hits.c                                   \
        search/index_searcher.c                         \
        search/match_all_docs_query.c                   \
        search/multi_phrase_query.c                     \
        search/non_matching_scorer.c                    \
        search/phrase_positions.c                       \
        search/phrase_queue.c                           \
        search/phrase_scorer.c                          \
        search/prefix_query.c                           \
        search/query.c                                  \
        search/req_excl_scorer.c                        \
        search/req_opt_sum_scorer.c                     \
        search/score_doc_comparator.c                   \
        search/scorer.c                                 \
        search/scorer_queue.c                           \
        search/searcher.c                               \
        search/similarity.c                             \
        search/single_match_scorer.c                    \
        search/sort_field.c                             \
        search/term_pos_query.c                         \
        search/term_pos_scorer.c                        \
        search/term_query.c                             \
        search/term_scorer.c                            \
        search/top_doc_collector.c                      \
        search/top_docs.c                               \
        search/weight.c                                 \
        store/directory.c                               \
        store/istream.c                                 \
        store/ostream.c                                 \
        util/array.c                                    \
        util/atom.c                                     \
        util/bitvector.c                                \
        util/errorcodes.c                               \
        util/list.c                                     \
        util/linked_list.c                              \
        util/priority_queue.c                           \
        util/smallfloat.c                               \
        util/string_buffer.c                            \
        util/to_string_utils.c                          \
        util/util.c
