dnl Process this file with autoconf to produce a configure script.
AC_INIT(src/liblucene4j.h)
# The following RCS revision string applies to configure.in
# $Revision: 1.1 $

AC_CONFIG_AUX_DIR([config])
AM_INIT_AUTOMAKE(liblucene4j, 0.1)
AC_CONFIG_SRCDIR([config])
AM_CONFIG_HEADER([config.h])
AC_DISABLE_SHARED

dnl Checks for programs.
AC_PROG_AWK
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_LN_S
AC_DISABLE_SHARED
AC_PROG_LIBTOOL


dnl Check for libarys
AC_CHECK_LIB([apr-1],[apr_file_open],,[AC_MSG_ERROR(apr-1 is required!)] )
AC_CHECK_LIB(lucene,lcn_list_get,, [AC_MSG_ERROR(liblucene is required!)])

dnl Checks for header files.
AC_CHECK_HEADERS(errno.h strings.h unistd.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_SIZE_T

dnl Checks for library functions.
AC_FUNC_LSTAT
AC_FUNC_MALLOC


AC_SUBST(LNAT_FLAG)

dnl  AC_CONFIG_FILES([Makefile])
AC_OUTPUT([Makefile liblucene4j/Makefile])

